buttons for options

--- a/src/app/single-player/single-player.component.html
+++ b/src/app/single-player/single-player.component.html
@@ -1,6 +1,7 @@
 <div class="quizrt-l-container">
   <button mat-raised-button (click)="Home()">Home</button>
   <button mat-raised-button (click)="EndGame()">End Game</button>
+  <div>{{username}}</div>
   <div class="single-player" *ngIf="!start && TopicSelected">
     <img class="quizrt-c-gameplay__loader__image" src="./assets/img/gameplay-loader.gif" alt="" srcset="">
     <div class="waiting" *ngIf="!start && TopicSelected">Starting Quiz</div>
@@ -13,7 +14,7 @@
       <mat-card-title class="question-title">
         {{currentQuestion.question}}
       </mat-card-title>
-     
+
       <mat-button-toggle-group class="options"  cols="2" [disabled]="answered">
         <mat-button-toggle *ngFor="let o of options" (click)= "scoreCalculator(o); answered=true;">{{o}}</mat-button-toggle>
       </mat-button-toggle-group>
