--- a/src/app/two-players/two-players.component.html
+++ b/src/app/two-players/two-players.component.html
@@ -1,4 +1,7 @@
 <div class="quizrt-l-container">
+    <button mat-raised-button (click)="Home()">Home</button>
+    <button mat-raised-button (click)="EndGame()">End Game</button>
+    <div>{{username}}</div>
   <div class="quizrt-c-gameplay" *ngIf="!start && !gameOver">
   <div *ngIf="waiting; else gameplay" class="quizrt-c-gameplay__loader">
     <img class="quizrt-c-gameplay__loader__image" src="./assets/img/gameplay-loader.gif" alt="" srcset="">
@@ -21,22 +24,21 @@
 </div>
 
 <div *ngIf="start && !gameOver">
-  <mat-card class="questions">
+  <mat-card class="questions question-start-timer">
+    <mat-card-title class="question-title">
     {{currentQuestion.question}}
-    <br>
-    <br>
-    <mat-radio-group class="options" *ngIf="!answered">
-      <mat-radio-button class="radio-button" *ngFor="let o of options" [value]="o" (click)="scoreCalculator(o); answered = true">
-        {{o}}<br>
-      </mat-radio-button>
-    </mat-radio-group>
+  </mat-card-title>
+
+  <mat-button-toggle-group class="options"  cols="2" [disabled]="answered">
+      <mat-button-toggle *ngFor="let o of options" (click)= "scoreCalculator(o); answered=true;">{{o}}</mat-button-toggle>
+    </mat-button-toggle-group>
+
   </mat-card>
 
   <mat-grid-list cols="2" rowHeight="5:1.5"  class="score">
     <mat-grid-tile>{{username}}: <br> {{ score }}</mat-grid-tile>
     <mat-grid-tile>{{otherUser}}:<br>{{ otherUserScore }}</mat-grid-tile>
   </mat-grid-list>
-  <br>
 </div>
 
 
@@ -57,7 +59,7 @@
   </mat-card>
 </div>
 
-<progress-bar *ngIf="start && !gameOver" [progress]="counter*10" [color-degraded]="{'10': '#1B7397', '20': '#05668D', '30':'#055D81','40': '#055474','50': '#044B67','60': '#04415A','70': '#03384D','80': '#032F41','90': '#022634','100': '#021C27'}">
+<!-- <progress-bar *ngIf="start && !gameOver" [progress]="counter*10" [color-degraded]="{'10': '#1B7397', '20': '#05668D', '30':'#055D81','40': '#055474','50': '#044B67','60': '#04415A','70': '#03384D','80': '#032F41','90': '#022634','100': '#021C27'}"> -->
 </progress-bar>
 </div>
 
