--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -35,34 +35,56 @@
   margin-top: 20px;
 }
 
-.questions{
-  width:80%;
-  /* opacity: 0; */
-  margin: auto;
-  margin-top:5rem;
-  font-size: 25px;
-  color:#021C27;
-  border-color:#021C27;
-  background-color: whitesmoke;
-  border-radius: 8px;
-  border-width: 10px;
-  font-family: 'Product Sans';
-  /* box-shadow: 20px 10px 10px #021C27; */
-  /* z-index: 100; */
+.question-start-timer {
+  height: 100%;
+  width: 100%;
+  background-size: 100% 200%;
+  background-image: linear-gradient(to bottom, #F06543  50%, white 50%);
+  -webkit-transition: background-position 10s;
+  -moz-transition: background-position 10s;
+  animation: an 10s;
+  animation-iteration-count: 7;
+  transition: all ease-in;
 }
-.options{
+
+@keyframes an {
+  from {
+    background-position: 0% 100%;
+  }
+  to {
+    background-position: 0% 200%;
+  }
+}
+
+@-webkit-keyframes an{
+  from {
+    background-position: 0% 100%;
+  }
+  to {
+    background-position: 0 -100%;
+  }
+}
+.questions {
+  width: 100% !important;
+  min-width: 100% !important;
+  /* margin: 30px 20px 30px; */
+  color: #021C27;
+  border-radius: 8px;
+}
+
+.options {
+  width:80%;
+  font-size: 1.2em !important;
+  margin: auto;
   display: inline-flex;
   flex-direction: column;
-  width:80%;
-  /* opacity: 0; */
-  margin: auto;
-  color:#021C27;
-  background-color:whitesmoke;
   font-family: 'Product Sans';
+  color:black;
+}
 
-  }
-
-
+.question-title {
+  flex-wrap: wrap;
+}
 #clock{
   width:30%;
   height: 3rem;
