buttons for options

--- a/src/app/two-players/two-players.component.html
+++ b/src/app/two-players/two-players.component.html
@@ -60,6 +60,6 @@
 </div>
 
 <!-- <progress-bar *ngIf="start && !gameOver" [progress]="counter*10" [color-degraded]="{'10': '#1B7397', '20': '#05668D', '30':'#055D81','40': '#055474','50': '#044B67','60': '#04415A','70': '#03384D','80': '#032F41','90': '#022634','100': '#021C27'}"> -->
-</progress-bar>
+<!-- </progress-bar> -->
 </div>
 
