option button css check

--- a/src/app/single-player/single-player.component.html
+++ b/src/app/single-player/single-player.component.html
@@ -1,6 +1,6 @@
 <div class="quizrt-l-container">
-  <button mat-raised-button class="home" (click)="Home()">Home</button>
-  <button mat-raised-button class="end" (click)="EndGame()">End Game</button>
+  <button mat-raised-button class="home" (click)="Home()">QuizRT</button>
+  <!-- <button mat-raised-button class="end" (click)="EndGame()">End Game</button> -->
   <div><h5>{{username}} is playing {{topic}}</h5></div>
   <div class="single-player" *ngIf="!start && TopicSelected">
     <img class="quizrt-c-gameplay__loader__image" src="./assets/img/gameplay-loader.gif" alt="" srcset="">
