--- a/src/app/single-player/single-player.component.css
+++ b/src/app/single-player/single-player.component.css
@@ -2,11 +2,23 @@
   height: 100vh;
   width: 100%;
   background: #403dd5;
-  display: flex;
-  flex-direction: column;
-  /* align-items: center; */
 }
 
+.quizrt-l-container__nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.home, .end {
+  width: 100%;
+  text-align: center;
+  color: white;
+}
+
+.game-status {
+  text-align: center;
+}
 
 h5 {
   color: white;
@@ -25,7 +37,6 @@ h5 {
   height: 100%;
   flex-direction: column;
   align-items: center;
-  justify-self: center;
   justify-content: center;
 }
 
