--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -4,21 +4,43 @@
   background: #403dd5;
   /* box-sizing: border-box; */
 }
-.quizrt-c-gameplay {
-  height: 100vh;
-  width: 100%;
-  background: #403dd5;
+
+.quizrt-l-container__nav {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
   align-items: center;
-  justify-content: center;
+}
+
+.home, .end {
+  width: 100%;
+  text-align: center;
+  color: white;
+}
+
+.question-container {
+  display: flex;
+  padding: 30px;
+  flex-direction: column;
+}
+
+.game-status {
+  text-align: center;
+}
+
+.quizrt-c-gameplay {
+  display: flex;
+  height: 100%;
+  padding: 20px;
+  background: #403dd5;
+  align-items: center;
+  flex-direction: column;
 }
 
 .quizrt-c-gameplay__loader {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 
 .quizrt-c-gameplay__loader__image {
@@ -31,7 +53,6 @@
 }
 
 .quizrt-c-gameplay__loader__msg {
-
   margin-top: 20px;
 }
 
