Added a score section at the top of questions

--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -37,6 +37,18 @@
   flex-direction: column;
 }
 
+.score-container {
+  display: flex;
+  width: 100%;
+  background: whitesmoke;
+  justify-content: space-between;
+}
+
+.score-container-player {
+  display: flex;
+  flex-direction: column;
+}
+
 .quizrt-c-gameplay__loader {
   display: flex;
   flex-direction: column;
