--- a/src/app/two-players/two-players.component.css
+++ b/src/app/two-players/two-players.component.css
@@ -40,12 +40,14 @@
 .score-container {
   display: flex;
   width: 100%;
-  background: whitesmoke;
+  /* background: whitesmoke; */
   justify-content: space-between;
 }
 
 .score-container-player {
+  padding: 15px;
   display: flex;
+  text-align: center;
   flex-direction: column;
 }
 
@@ -169,8 +171,7 @@
     /* width:60%;
     height:60%; */
     margin:auto;
-    margin-top:5rem;
-    background: #403dd5;
+    margin-top: 30px;
 }
 .result .button{
   margin-left: 10%;
